<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diablo_body</name>
  <version>1.0.0</version>
  <description>Robot sensor msgs</description>
  <maintainer email="vulcanyjx@todo.com">vulcanyjx</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>motion_msgs</depend>
  <depend>ception_msgs</depend>
  <depend>diablo_utils</depend>
  <depend>builtin_interfaces</depend> 
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
